fixes nav and sidebar issues on smaller screens

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,10 +26,15 @@ button {
     letter-spacing: 1px;
     transition: all 0.2s ease-in-out;
 }
+/*
+nav {
+    padding: 2em;
+    gap: 2em
+}*/
 
 nav {
-    padding: 1em 2em;
-    gap: 2em
+    margin: 0 auto;
+    padding: 2em;
 }
 
 /* --- TYPOGRAPHY --- */
@@ -100,13 +105,13 @@ hr {
 }
 
 .margin-left {
-    margin-left: 30px;
+    margin-left: 35px;
     transition: margin-left .5s;
 }
 
-@media (min-width: 850px) {
+@media (min-width: 400px) {
     .margin-left {
-        margin-left: 200px;
+        margin-left: 50px;
     }
 }
 
@@ -131,10 +136,6 @@ hr {
     background-color: #323232;
 }
 
-.nav-btn:hover {
-    color: #27292c;
-    background-color: #d6b8ff;
-}
 
 @media (min-width: 700px) {
     .btn {
@@ -142,21 +143,19 @@ hr {
     }
 }
 
-
 /* --- NAVIGATION --- */
-.nav, .navbar {
+.navbar {
     display: block;
 }
 
-@media (min-width: 650px) {
-    .nav, .navbar {
-        display: flex;
-    }
+.nav-icon__bars, .nav-icon__cross {
+    color: #e3e3e3;;
+    font-size: 1.4rem;
+    cursor: pointer;
+}
 
-    .navbar-flex-item {
-        display: flex;
-        align-items: baseline;
-    }
+.nav-icon__cross {
+    display: none;
 }
 
 .nav-btn {
@@ -176,13 +175,30 @@ hr {
     text-decoration: underline;
 }
 
+.nav-btn:hover {
+    color: #27292c;
+    background-color: #d6b8ff;
+}
+
+/* In smaller screens navigation is only visible when this class is called on it */
+.visible {
+    display: block;
+}
+
+@media (min-width: 900px) {
+    nav, .nav, .navbar {
+        display: flex;
+        justify-content: center;
+        padding: 1em;
+    }
+}
 
 /* --- SIDEBAR --- */
 .sidebar {
     min-height: 100%;
     max-height: 100%;
     position: fixed;
-    width: 90%;
+    width: 40px;
     max-width: 200px;
     padding: 0.5em;
     color: #f8f9fa;
@@ -192,6 +208,16 @@ hr {
     transition: 0.5s;
     z-index: 10;
     background-color: #27292c;
+}
+
+@media (min-width: 400px) {
+    .sidebar {
+        width: 50px;
+    }
+}
+
+#sidebar__content {
+    visibility: hidden;
 }
 
 .sidebar__title {
@@ -242,10 +268,10 @@ hr {
 }
 
 
-/* --- ARROW AND CROSS ICONS --- */
+/* --- ARROW AND CROSS ICONS ON SIDEBAR --- */
 .icon {
     cursor: pointer;
-    transition: all 0.2s ease-in-out;
+    font-size: 20px;
 }
 
 .icon:hover {
@@ -254,6 +280,8 @@ hr {
 
 .icon__cross:hover {
     color: red;
+    transition: all 0.1s ease-in-out;
+
 }
 
 /* --- CATEGORIES PAGE --- */
